# wordplay-rs

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/benches/: wordplay_bench.rs
core/src/: anagram_number.rs  char_match.rs  dictionary.rs  lib.rs  normalized_word.rs
core/tests/: integration_test.rs
wordplay/: Cargo.toml  README.md
wordplay/benches/: wordplay_bench.rs
wordplay/src/: anagram_number.rs  char_freq.rs  char_map.rs  corpus.rs  dictionary.rs  lib.rs  normalized_word.rs  trie.rs
wordplay/tests/: integration_test.rs
