[package]
name = "wordplay_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
strum = "0.23"
strum_macros = "0.23"
lazy_static = "1.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "wordplay_bench"
harness = false